tests/snapshots/file@operator@equals_class.lox.snap
---
source: tests/common/mod.rs
description: "// Bound methods have identity equality.\nclass Foo {}\nclass Bar {}\n\nprint Foo == Foo; // expect: true\nprint Foo == Bar; // expect: false\nprint Bar == Foo; // expect: false\nprint Bar == Bar; // expect: true\n\nprint Foo == \"Foo\"; // expect: false\nprint Foo == nil;   // expect: false\nprint Foo == 123;   // expect: false\nprint Foo == true;  // expect: false\n"
input_file: crafting_interpreters_test_files/operator/equals_class.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'class'
   ╭─[2:1]
 1 │ // Bound methods have identity equality.
 2 │ class Foo {}
   · ──┬──
   ·   ╰── here
 3 │ class Bar {}
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found 'class'
   ╭─[3:1]
 2 │ class Foo {}
 3 │ class Bar {}
   · ──┬──
   ·   ╰── here
 4 │ 
   ╰────
